# oneqlick-backend

./: .dockerignore  .env  .env.example  .gitignore  .vercelignore  BATCH_CLEANUP_README.md  CAROUSEL_ENUM_FIX_DEPLOYMENT.md  DEPLOYMENT.md  Dockerfile  FINAL_TEST_RESULTS.md  INTEGRATION_SUMMARY.md  QUICKSTART.md  RAILWAY-ENV-SETUP.md  RAILWAY-ISSUES.md  RATE_LIMIT_DEPLOYMENT.md  RATE_LIMIT_FIX.md  README.md  SENDGRID-INTEGRATION.md  TEST_RESULTS.md  UPSTASH_MIGRATION_GUIDE.md  UPSTASH_QUICK_REF.md  batch_cleanup.py  carousel_coupons_insert.sql  carousel_coupons_uppercase.sql  check_enum_definition.sql  create_pending_users_table.py  create_tables.py  debug_headers.py  demo_batch_cleanup.py  docker-compose.prod.yml  docker-compose.yml  env.example  environment.env  fix_coupon_enum_migration.sql  gunicorn.conf.py  pyproject.toml  quick_rate_test.py  railway.json  requirements.txt  run_batch_cleanup.bat  (+12 more)
api/: index.py
api_docs/: otp_api_docs.md  restaurant_api_docs.md  test_otp_api.sh  test_restaurant_api.sh  test_user_api.sh  user_api_docs.md
app/: .dockerignore  main.py
aws/: buildspec.yml  ecs-params.yml  task-definition.json
docs/: API-GAP-ANALYSIS.md  AUTO-LOGIN-DEBUG.md  AUTO-LOGIN-FIXED.md  AUTO-LOGIN-IMPLEMENTATION.md  AUTO-LOGIN-QUICK-FIX.md  AUTO-LOGIN-SUCCESS.md  AUTO-LOGIN-TESTING-GUIDE.md  AWS_EC2_DEPLOYMENT.md  CATEGORIES-API-IMPLEMENTATION.md  CATEGORIES-SHOW-ON-HOME-FLAG.md  COUPONS-API.md  COUPONS-COMPLETE-SUMMARY.md  COUPONS-IMPLEMENTATION-SUMMARY.md  COUPONS-USER-APP-INTEGRATION.md  DOCKER.md  EXECUTIVE-SUMMARY.md  FOOD-ITEMS-OFFERS-UPDATE.md  (+10 more)
(+166 files in other folders)
